--- a/src/pages/SignUp/SignUp.css
+++ b/src/pages/SignUp/SignUp.css
@@ -19,7 +19,7 @@
 .signup-form h2 {
   text-align: center;
   margin-bottom: 2rem;
-  color: #646cff;
+  color: #B8DCCC;
   font-size: 2rem;
 }
 
@@ -47,7 +47,7 @@
 
 .form-group input:focus {
   outline: none;
-  border-color: #646cff;
+  border-color: #B8DCCC;
   box-shadow: 0 0 0 2px rgba(100, 108, 255, 0.2);
 }
 
@@ -58,7 +58,7 @@
 .signup-button {
   width: 100%;
   padding: 0.75rem;
-  background: #646cff;
+  background: #B8DCCC;
   color: white;
   border: none;
   border-radius: 8px;
@@ -70,7 +70,7 @@
 }
 
 .signup-button:hover {
-  background: #535bf2;
+  background: #B8DCCC;
 }
 
 .signup-links {
@@ -79,13 +79,13 @@
 }
 
 .signup-links a {
-  color: #646cff;
+  color: #B8DCCC;
   text-decoration: none;
   margin-left: 0.5rem;
 }
 
 .signup-links a:hover {
-  color: #535bf2;
+  color: #B8DCCC;
   text-decoration: underline;
 }
 
